--- a/debian/control
+++ b/debian/control
@@ -2,7 +2,7 @@ Source: zero-lliurex-inventory
 Section: x11
 Priority: optional
 Maintainer: Equipo LliureX <lliurex@gva.es>
-Build-Depends: cdbs, debhelper (>= 10),zero-dev, llxsrchelper,inkscape (>= 0.47)
+Build-Depends: debhelper (>= 10),zero-dev, llxsrchelper,inkscape (>= 0.47)
 Standards-Version: 4.1.2
 
 Package: zero-lliurex-inventory
