Source renamed to 'lliurex-inventory' (debian/jammy)

--- a/debian/control
+++ b/debian/control
@@ -1,4 +1,4 @@
-Source: zero-lliurex-inventory
+Source: lliurex-inventory
 Section: x11
 Priority: optional
 Maintainer: Equipo LliureX <lliurex@gva.es>
